# whoop-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
src/whoop_mcp/: __init__.py  auth.py  client.py  config.py  db.py  models.py  server.py  sync.py  tokens.py
