[project]
name = "whoop-mcp"
version = "0.1.0"
description = "Local MCP server that pulls personal WHOOP data into SQLite and exposes it to Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "mcp[cli]>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
whoop-auth = "whoop_mcp.auth:main"
whoop-client = "whoop_mcp.client:main"
whoop-sync = "whoop_mcp.sync:main"
whoop-mcp = "whoop_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whoop_mcp"]
